# yarilo

./: CMakeLists.txt  README.md  backupbot.sh  makefs.sh
ex_conf/: bot.conf
ex_conf/users/: Exemple
include/: bot.h  bot_api.h  classes.h  color_console.h  event.h  filesystem.h  irc_colors.h  logs.h  misc.h  module.h  module_info.h  server.h  user.h  user_info.h
modules/: CMakeLists.txt
modules/admin/: admin.cpp
modules/autojoin/: autojoin.cpp
modules/automodes/: CMakeLists.txt  automodes.cpp
modules/autorejoin/: autorejoin.cpp
modules/logs/: logs.cpp
modules/megahal/: CMakeLists.txt  megahal.c  megahal.h  megahal_can_react.cpp  megahal_func.h  megahal_misc.cpp  megahal_misc.h  megahal_mod.cpp
modules/memo/: memo.cpp
modules/mods/: mods.cpp
modules/prints/: prints.cpp
modules/user/: user.cpp
modules/version/: version.cpp
src/: Makefile  bot.cpp  bot_modules.cpp  bot_users.cpp  color_console.cpp  event.cpp  filesystem.cpp  irc_colors.cpp  logs.cpp  main.cpp  misc.cpp  module.cpp  module_info.cpp  parse.cpp  server.cpp  user.cpp  user_info.cpp
src/sha1/: Makefile
